Bug 81519 - TiledBackingStore: When checking if the visible area is covered, only convert to scaled coordinates once.
Summary: TiledBackingStore: When checking if the visible area is covered, only convert...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Jocelyn Turcotte
URL:
Keywords:
Depends on:
Blocks: 79666 79668
  Show dependency treegraph
 
Reported: 2012-03-19 09:32 PDT by Jocelyn Turcotte
Modified: 2012-03-22 11:34 PDT (History)
3 users (show)

See Also:


Attachments
Patch (1.59 KB, patch)
2012-03-19 09:36 PDT, Jocelyn Turcotte
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Jocelyn Turcotte 2012-03-19 09:32:40 PDT
TiledBackingStore: When checking if the visible area is covered, only convert to scaled coordinates once.
Comment 1 Jocelyn Turcotte 2012-03-19 09:36:13 PDT
Created attachment 132599 [details]
Patch
Comment 2 Jocelyn Turcotte 2012-03-21 10:17:15 PDT
Committed r111560: <http://trac.webkit.org/changeset/111560>
Comment 3 Szilard Ledan 2012-03-22 08:36:35 PDT
This test: compositing/geometry/preserve-3d-switching.html fails(timeout) on x86-32 Linux Qt version.
After this patch these tests keep crashing:
compositing/geometry/layer-due-to-layer-children.html
compositing/geometry/repaint-foreground-layer.html.

So this bug should be reopened.

--- /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/compositing/geometry/preserve-3d-switching-expected.txt 
+++ /ramdisk/qt-linux-32-release-webkit2/build/layout-test-results/compositing/geometry/preserve-3d-switching-actual.txt 
@@ -1,39 +1,1 @@
-The green box appear angled out from the yellow box and embedded in it.
-
--webkit-transform: translateZ(-100px) rotateY(45deg);
-(GraphicsLayer
-  (bounds 800.00 600.00)
-  (children 1
-    (GraphicsLayer
-      (bounds 800.00 600.00)
-      (children 1
-        (GraphicsLayer
-          (position 108.00 74.00)
-          (bounds 304.00 304.00)
-          (drawsContent 1)
-          (childrenTransform [1.00 0.00 0.00 0.00] [0.00 1.00 0.00 0.00] [0.00 0.00 1.00 -0.00] [0.00 0.00 0.00 1.00])
-          (children 1
-            (GraphicsLayer
-              (position 12.00 12.00)
-              (bounds 280.00 280.00)
-              (opacity 0.80)
-              (preserves3D 1)
-              (drawsContent 1)
-              (transform [0.77 -0.56 -0.32 0.00] [0.00 0.50 -0.87 0.00] [0.64 0.66 0.38 0.00] [0.00 0.00 0.00 1.00])
-              (children 1
-                (GraphicsLayer
-                  (position 40.00 40.00)
-                  (bounds 200.00 200.00)
-                  (opacity 0.70)
-                  (drawsContent 1)
-                  (transform [0.77 0.00 0.64 0.00] [0.00 1.00 0.00 0.00] [-0.64 0.00 0.77 0.00] [0.00 0.00 50.00 1.00])
-                )
-              )
-            )
-          )
-        )
-      )
-    )
-  )
-)
-
+Timed out waiting for final message from web process
Comment 4 Csaba Osztrogonác 2012-03-22 08:41:35 PDT
Reopen based on Comment #3
Comment 5 Szilard Ledan 2012-03-22 09:41:46 PDT
Skipped on Qt WK2 -  http://trac.webkit.org/changeset/111711/trunk/LayoutTests/platform/qt-5.0-wk2/Skipped

Please unskip with the proper fix.
Comment 6 Jocelyn Turcotte 2012-03-22 11:33:24 PDT
Committed r111735: <http://trac.webkit.org/changeset/111735>
Comment 7 Jocelyn Turcotte 2012-03-22 11:34:43 PDT
Should be fixed now, thanks for finding it out.
I couldn't reproduce the crash on the two other tests but they were probably caused by the same problem so I unskipped them too.