TiledBackingStore: When checking if the visible area is covered, only convert to scaled coordinates once. https://bugs.webkit.org/show_bug.cgi?id=81519

Reviewed by Kenneth Rohde Christiansen.

Both visibleRect and coverageRatio call mapFromContents on the input rect,
this woulc cause the coverageRatio to never reach 1.0 when the contents is
scaled up.

* platform/graphics/TiledBackingStore.cpp:
(WebCore::TiledBackingStore::visibleAreaIsCovered):

Canonical link: https://commits.webkit.org/99063@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111560 268f45cc-cd09-0410-ab3c-d52691b4dbfc